--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ Flask-SocketIO==5.3.5
 Flask-SQLAlchemy==3.1.1
 python-engineio==4.8.0
 python-socketio==5.10.0
-eventlet==0.33.3
 reportlab==4.0.7
 python-docx==1.1.0
 requests==2.31.0
+eventlet==0.33.3
+greenlet==2.0.2
 gevent==22.10.2
 gunicorn==21.2.0
+setuptools
